Fix center alignment on home.

--- a/web/base.css
+++ b/web/base.css
@@ -363,7 +363,7 @@ div#hist,
 }
 
 .main-page {
-  text-align: center;
+  align-items: center;
 }
 
 /* Breadcrumbs
